ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-production"
spec:
  # https 적용을 위한 설정
	tls:
  - hosts:
    - hanspoon.scg.skku.ac.kr
    secretName: hanspoon-tls
  # 어떤 도메인/경로와 어떤 서비스+포트를 연결해줄 것인지 설정
	rules:
  - host: hanspoon.scg.skku.ac.kr
    http:
      paths:
      - backend:
          service:
            name: nginx-service
            port:
              number: 80
        path: /
        pathType: Prefix
